--- a/assets/less/layout.less
+++ b/assets/less/layout.less
@@ -7,13 +7,15 @@
   #aside {
     flex: 1;
     width: 0;
+    position: sticky;
+    top: 0;
   }
 
   .container {
     flex: 5;
     // width: 100%;
-    height: 100vh;
-    overflow: auto;
+    // height: 100vh;
+    // overflow: auto;
   }
 }
 
